@@ -84,6 +84,9 @@ New Features
 
 * SOLR-4048: Add findRecursive method to NamedList. (Shawn Heisey)
 
+* SOLR-4228: SolrJ's SolrPing object has new methods for ping, enable, and
+  disable. (Shawn Heisey)
+
 Bug Fixes
 ----------------------
 
